fix reponsiveness at banner on mobile

--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -9,7 +9,8 @@
             display: block;
             text-align: left;
             margin-left: 8%;  
-            margin-top: 113px;                    
+            margin-top: 80px; 
+        
             
 
             .banner__title{
@@ -17,7 +18,21 @@
                 font-family: 'Lato', sans-serif;
                 font-size: 22.861px;
                 font-style: normal;
-                font-weight: 700;
+                font-weight: 700;                
+            }
+
+            .banner__principal{
+                margin-top: 10px;
+                color: #3B200B;               
+                font-family: Lilita One;
+                font-size: 77.651px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 85.416px;
+
+                span{
+                    color: #F59A1B;
+                }
             }
 
             .banner__text{
@@ -26,6 +41,7 @@
                 font-size: 22.861px;
                 font-style: normal;
                 font-weight: 400;
+                margin-top:10px;
 
                 span{
                     color: rgba(29, 6, 5, 0.69);
@@ -55,4 +71,22 @@
             }
 
         }        
+    }
+
+    @media (max-width:480px) {
+        .banner{
+            background: url(../../assets/bannermob.png), lightgray 50% / cover no-repeat;
+            width: 100%;
+            height: 856px;
+
+            .banner__content{
+                margin-left: 5%;
+                margin-top: 80px;
+
+                .banner__title{
+                    font-size: 18px;
+                }
+            }
+        }
+        
     }
