--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,17 @@
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
     font-family: 'Lilita One', cursive;
+    *:after,
+*:before {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+text-decoration: none;
+}
+body{
+font-size: 100%;
+list-style-type: none;
+}
+
     
 }
